Multi-location Nginx proxy support

--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -18,16 +18,23 @@ RUN apk update && apk add bash nginx openssl curl socat jq moreutils
 RUN cd /root; curl -sSL "https://github.com/acmesh-official/acme.sh/archive/refs/tags/2.9.0.tar.gz"|tar zxvf -
 RUN cd /root; mv acme.sh-2.9.0 .acme.sh
 
-COPY site-ssl-grpc.conf.tpl /etc/nginx/http.d/
+COPY site-ssl.conf.tpl /etc/nginx/http.d/
+COPY grpc.tpl /etc/nginx/http.d/
+COPY ws.tpl /etc/nginx/http.d/
 ADD run.sh                  /run.sh
 ADD server-ltx.sh           /server-ltx.sh
 ADD server-ltt.sh           /server-ltt.sh
 ADD server-lttw.sh          /server-lttw.sh
+ADD server-ltpw.sh          /server-ltpw.sh
 ADD server-mtt.sh           /server-mtt.sh
 ADD server-mttw.sh          /server-mttw.sh
+ADD server-mtpw.sh          /server-mtpw.sh
 ADD server-ttt.sh           /server-ttt.sh
 ADD server-tttw.sh          /server-tttw.sh
+ADD server-ttpw.sh          /server-ttpw.sh
 ADD server-lttg.sh          /server-lttg.sh
+ADD server-ltpg.sh          /server-ltpg.sh
+ADD server-nginx.sh         /server-nginx.sh
 
 RUN chmod 755 /*.sh
 
