--- a/.github/workflows/docker-buildx-dev.yml
+++ b/.github/workflows/docker-buildx-dev.yml
@@ -2,7 +2,10 @@ name: docker-buildx-dev
 
 on:
   push:
-    branches: dev
+    branches:
+      - dev
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   multi-arch-dev:
