--- a/.github/workflows/docker-buildx-latest.yml
+++ b/.github/workflows/docker-buildx-latest.yml
@@ -2,7 +2,10 @@ name: docker-buildx-latest
 
 on:
   push:
-    branches: master
+    branches:
+      - master
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   multi-arch-latest:
