--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -15,7 +15,7 @@ name: Codacy Security Scan
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "dev" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "master" ]
