--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -1,6 +1,7 @@
 name: Trivy-scanning
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -16,13 +17,12 @@ jobs:
         with:
           ref: ${{ github.ref }}
       -
-        name: Run Trivy fs vulnerability scanner
+        name: Run Trivy fs vulnerability scanner in fs mode
         uses: aquasecurity/trivy-action@0.20.0
         with:
           scan-type: 'fs'
           ignore-unfixed: true
-          format: 'template'
-          template: '@/contrib/sarif.tpl'
+          format: 'sarif'
           output: 'trivy-results.sarif'
           #severity: 'CRITICAL'
       -
