Squashed commit of the following:
commit 8c90a783b6e35530bc5db2fe5a62528f037f8ae6
Author: Samuel Huang <samuelh2006@gmail.com>
Date:   Fri Oct 4 20:37:19 2024 +1000

    Trivy compliant

commit 05857d2008fa3cb7cb95fd1be8b451f40e69dbf8
Author: Samuel Huang <samuelh2006@gmail.com>
Date:   Thu Oct 3 21:44:08 2024 +1000

    Add workflow_dispatch to Codacy

commit 4d3a971d17d3fda23639ac98fecb580bd8063cea
Author: Samuel Huang <samuelh2006@gmail.com>
Date:   Thu Oct 3 21:36:40 2024 +1000

    Trivy compliant

commit a9c25bbf1fc36c86ce765b5987c61265baea73c8
Author: Samuel Huang <samuelh2006@gmail.com>
Date:   Thu Oct 3 20:56:44 2024 +1000

    Update trivy scanner

commit 368a9c36e09fe30b5175f4fc1400e664285a07f9
Author: Samuel Huang <samuelh2006@gmail.com>
Date:   Tue Oct 1 08:20:43 2024 +1000

    Codacy compliant

--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -1,6 +1,7 @@
 name: Trivy-scanning
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -12,21 +13,20 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
       -
-        name: Run Trivy fs vulnerability scanner
-        uses: anandg112/trivy-action@feat/add-skip-dirs-option
+        name: Run Trivy fs vulnerability scanner in fs mode
+        uses: aquasecurity/trivy-action@0.20.0
         with:
           scan-type: 'fs'
           ignore-unfixed: true
-          format: 'template'
-          template: '@/contrib/sarif.tpl'
+          format: 'sarif'
           output: 'trivy-results.sarif'
           #severity: 'CRITICAL'
       -
         name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
